--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"clientId": "1012626726624444488",
-	"guildId": "898314244095877180",
-	"token": "MTAxMjYyNjcyNjYyNDQ0NDQ4OA.G9MPNB.mRYGMsD-bUBx0xVb3GXd6QYsTqzqAXUrL53GkU",
+	"clientId": "632435086746189825",
+	"guildId": "849971350382051338",
+	"token": "NjMyNDM1MDg2NzQ2MTg5ODI1.GXVdsG.OBZ8vHpZW0rVVxUUdbiz4jrdrnfUEhHWRxwcFE",
 	"oldguildId": "941003838771564614"
 }
